feat: dev 환경 외부 DB/Redis 설정 및 Exporter 추가
- dev.yaml: local-ubuntu처럼 외부 PostgreSQL/Redis 설정 추가
  - 172.18.0.1 (Kind 게이트웨이)로 호스트 PC의 DB 사용
  - DB_AUTO_MIGRATE: false (기존 데이터 보존)

- Monitoring Exporters 추가:
  - PostgreSQL Exporter (prometheuscommunity/postgres-exporter:v0.15.0)
  - Redis Exporter (oliver006/redis_exporter:v1.55.0)
  - Prometheus scrape config에 exporter job 추가

- helm-install-all에 port-forward-monitoring 포함
  - 설치 완료 후 자동으로 포트포워딩 실행

--- a/helm/charts/wealist-monitoring/templates/prometheus/configmap.yaml
+++ b/helm/charts/wealist-monitoring/templates/prometheus/configmap.yaml
@@ -82,6 +82,23 @@ data:
       {{- end }}
 
       # ==========================================================================
+      # Database Exporters
+      # ==========================================================================
+      {{- if .Values.postgresExporter.enabled }}
+      - job_name: 'postgres-exporter'
+        static_configs:
+          - targets: ['postgres-exporter:{{ .Values.postgresExporter.service.port }}']
+        metrics_path: '/metrics'
+      {{- end }}
+
+      {{- if .Values.redisExporter.enabled }}
+      - job_name: 'redis-exporter'
+        static_configs:
+          - targets: ['redis-exporter:{{ .Values.redisExporter.service.port }}']
+        metrics_path: '/metrics'
+      {{- end }}
+
+      # ==========================================================================
       # Kubernetes Service Discovery (Pod Annotations)
       # ==========================================================================
       - job_name: 'kubernetes-pods'
