fix: 시크릿 중복 생성 방지 (lookup 사용)

--- a/helm/charts/wealist-infrastructure/templates/secret-shared.yaml
+++ b/helm/charts/wealist-infrastructure/templates/secret-shared.yaml
@@ -1,3 +1,4 @@
+{{- if not (lookup "v1" "Secret" .Values.global.namespace "wealist-shared-secret") }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -23,3 +24,4 @@ stringData:
   # OAuth2 Credentials
   GOOGLE_CLIENT_ID: {{ .Values.shared.secrets.GOOGLE_CLIENT_ID | quote }}
   GOOGLE_CLIENT_SECRET: {{ .Values.shared.secrets.GOOGLE_CLIENT_SECRET | quote }}
+{{- end }}
