--- a/k8s/helm/charts/wealist-infrastructure/templates/postgres/statefulset.yaml
+++ b/k8s/helm/charts/wealist-infrastructure/templates/postgres/statefulset.yaml
@@ -32,8 +32,8 @@ spec:
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: postgres-secret
-                  key: POSTGRES_PASSWORD
+                  name: wealist-shared-secret
+                  key: DB_PASSWORD
             - name: PGDATA
               value: /var/lib/postgresql/data/pgdata
           volumeMounts:
