--- a/.github/workflows/frontend-prod.yaml
+++ b/.github/workflows/frontend-prod.yaml
@@ -171,7 +171,7 @@ jobs:
     name: Deploy to S3 (Prod)
     runs-on: ubuntu-latest
     needs: [validate, tag-image-prod]
-    environment: prod
+    # environment: prod
 
     defaults:
       run:
