--- a/k8s/helm/charts/wealist-monitoring/templates/prometheus/deployment.yaml
+++ b/k8s/helm/charts/wealist-monitoring/templates/prometheus/deployment.yaml
@@ -33,6 +33,10 @@ spec:
             - "--web.console.libraries=/etc/prometheus/console_libraries"
             - "--web.console.templates=/etc/prometheus/consoles"
             - "--web.enable-lifecycle"
+            {{- if .Values.prometheus.config.externalUrl }}
+            - "--web.external-url={{ .Values.prometheus.config.externalUrl }}"
+            - "--web.route-prefix=/"
+            {{- end }}
           ports:
             - name: http
               containerPort: 9090
