chore: .gitignore에 istio-*/ 추가 (자동 설치된 CLI 도구)

--- a/.gitignore
+++ b/.gitignore
@@ -149,6 +149,11 @@ grafana/volume/**
 prometheus/volume/
 prometheus/data/
 
+# ============================================
+# Downloaded CLI Tools (자동 설치됨)
+# ============================================
+istio-*/
+
 # SonarQube
 .scannerwork/
 
