--- a/k8s/helm/charts/wealist-infrastructure/values.yaml
+++ b/k8s/helm/charts/wealist-infrastructure/values.yaml
@@ -99,6 +99,29 @@ redis:
       memory: "256Mi"
       cpu: "200m"
 
+# Frontend configuration (disabled by default - enable in localhost.yaml)
+frontend:
+  enabled: false
+
+  image:
+    repository: localhost:5001/frontend
+    tag: "latest"
+    pullPolicy: Always
+
+  replicas: 1
+
+  service:
+    type: ClusterIP
+    port: 80
+
+  resources:
+    requests:
+      memory: "128Mi"
+      cpu: "50m"
+    limits:
+      memory: "256Mi"
+      cpu: "200m"
+
 # Ingress configuration
 # Note: These are LOCAL/DEV defaults. Production settings should be in
 # helm/environments/prod.yaml or staging.yaml.
