--- a/k8s/helm/environments/dev.yaml
+++ b/k8s/helm/environments/dev.yaml
@@ -12,7 +12,7 @@ global:
   namespace: wealist-dev
   environment: development
   domain: dev.wealist.co.kr
-  imageRegistry: ghcr.io
+  # imageRegistry: ghcr.io
 
 # -----------------------------------------------------------------------------
 # cert-manager Configuration (Disabled - CloudFront handles SSL termination)
