--- a/k8s/helm/environments/secrets.example.yaml
+++ b/k8s/helm/environments/secrets.example.yaml
@@ -1,14 +1,12 @@
 # =============================================================================
-# Secrets Template - Copy to {environment}-secrets.yaml
+# Secrets Template - Copy to secrets.yaml
 # =============================================================================
-# This file is a TEMPLATE. Copy it to create environment-specific secrets:
+# This file is a TEMPLATE. Copy it to create your secrets file:
 #
-#   cp secrets.example.yaml local-ubuntu-secrets.yaml
-#   cp secrets.example.yaml dev-secrets.yaml
-#   cp secrets.example.yaml staging-secrets.yaml
-#   cp secrets.example.yaml prod-secrets.yaml
+#   cp secrets.example.yaml secrets.yaml
 #
-# These *-secrets.yaml files are gitignored and will NOT be committed.
+# secrets.yaml is gitignored and will NOT be committed.
+# All environments (localhost, dev, staging, prod) use the same secrets.yaml.
 # =============================================================================
 
 shared:
