feat: 모니터링/Istio 이미지 GHCR 미러링 및 설정 추가

--- a/k8s/helm/charts/istio-addons/templates/grafana.yaml
+++ b/k8s/helm/charts/istio-addons/templates/grafana.yaml
@@ -70,7 +70,7 @@ spec:
     spec:
       containers:
       - name: grafana
-        image: grafana/grafana:10.2.2
+        image: "{{ .Values.grafana.image.repository }}:{{ .Values.grafana.image.tag }}"
         env:
         - name: GF_SECURITY_ADMIN_USER
           value: {{ .Values.grafana.adminUser }}
