--- a/k8s/helm/charts/istio-addons/templates/jaeger.yaml
+++ b/k8s/helm/charts/istio-addons/templates/jaeger.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: jaeger
-        image: jaegertracing/all-in-one:1.52
+        image: "{{ .Values.jaeger.image.repository }}:{{ .Values.jaeger.image.tag }}"
         env:
         - name: COLLECTOR_ZIPKIN_HOST_PORT
           value: ":9411"
