ci: (임시) 잘못된 이미지 이름 수정

--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -44,7 +44,7 @@ RUN pnpm run build || (echo "Build failed. Check Vite config or env vars." && ex
 
 # === Production Stage ===
 # Serves static files with nginx
-FROM ghcr.io/orangescloud/base/nginx-stable-alpine AS production
+FROM nginx:stable-alpine AS production
 
 # Copy built assets
 COPY --from=builder /app/dist /usr/share/nginx/html
