--- a/.github/workflows/ci-build-images.yaml
+++ b/.github/workflows/ci-build-images.yaml
@@ -117,7 +117,7 @@ jobs:
         run: |
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
             if [ -n "${{ github.event.inputs.services }}" ]; then
-              SERVICES=$(echo '${{ github.event.inputs.services }}' | jq -R 'split(",") | map(gsub("^\\s+|\\s+$";""))')
+              SERVICES=$(echo '${{ github.event.inputs.services }}' | jq -cR 'split(",") | map(gsub("^\\s+|\\s+$";""))')
               echo "Manual trigger with services: ${SERVICES}"
             else
               SERVICES='["auth-service","board-service","chat-service","noti-service","storage-service","user-service","video-service"]'
@@ -131,7 +131,7 @@ jobs:
             OTHER_CHANGES='${{ steps.filter.outputs.changes }}'
             if [ "${OTHER_CHANGES}" != "[]" ] && [ -n "${OTHER_CHANGES}" ]; then
               # common-package 제외하고 병합
-              SERVICES=$(echo "${GO_SERVICES}" "${OTHER_CHANGES}" | jq -s 'add | unique | map(select(. != "common-package"))')
+              SERVICES=$(echo "${GO_SERVICES}" "${OTHER_CHANGES}" | jq -sc 'add | unique | map(select(. != "common-package"))')
             else
               SERVICES="${GO_SERVICES}"
             fi
@@ -222,7 +222,8 @@ jobs:
           SHORT_SHA="${{ github.sha }}"
           SHORT_SHA=${SHORT_SHA:0:7}
           ENV="${{ needs.detect-changes.outputs.environment }}"
-          ECR_REGISTRY="${{ needs.detect-changes.outputs.ecr_registry }}"
+          # ECR registry를 직접 구성 (outputs으로 전달 시 secret 마스킹 문제 회피)
+          ECR_REGISTRY="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com"
           SERVICE="${{ matrix.service }}"
 
           # 태그 생성
@@ -239,55 +240,8 @@ jobs:
           echo "Image URI: ${ECR_REGISTRY}/${SERVICE}"
 
       # -------------------------------------------------------------------------
-      # [1단계] 보안 검사용 임시 빌드 (amd64 Only, No Push)
-      # -------------------------------------------------------------------------
-      - name: Build for Scan (amd64)
-        uses: docker/build-push-action@v5
-        with:
-          context: ${{ steps.build-config.outputs.context }}
-          file: ${{ steps.build-config.outputs.dockerfile }}
-          platforms: linux/amd64
-          load: true # 로컬 도커 데몬으로 이미지 로드
-          push: false # 푸시하지 않음
-          tags: ${{ matrix.service }}:scan-temp
-          cache-from: type=gha,scope=${{ matrix.service }}-${{ needs.detect-changes.outputs.environment }}
-          cache-to: type=gha,mode=max,scope=${{ matrix.service }}-${{ needs.detect-changes.outputs.environment }}
-
-      # -------------------------------------------------------------------------
-      # [2단계] Trivy 스캔 (검사만 수행, 배포 중단 안함)
-      # -------------------------------------------------------------------------
-
-      # A. 로그 확인용 (Table 출력)
-      - name: Run Trivy (Log Output)
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ matrix.service }}:scan-temp
-          format: "table"
-          exit-code: "0"
-          ignore-unfixed: true
-          vuln-type: "os,library"
-          severity: "CRITICAL,HIGH"
-
-      # B. Security 탭 업로드용 (SARIF 생성)
-      - name: Run Trivy (SARIF Output)
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ matrix.service }}:scan-temp
-          format: "sarif"
-          output: "trivy-results.sarif"
-          exit-code: "0"
-          ignore-unfixed: true
-          vuln-type: "os,library"
-          severity: "CRITICAL,HIGH"
-
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: "trivy-results.sarif"
-          category: ${{ matrix.service }}
-
-      # -------------------------------------------------------------------------
-      # [3단계] 실제 배포용 멀티 아키텍처 빌드 및 푸시
+      # 멀티 아키텍처 빌드 및 ECR 푸시
+      # (Trivy 스캔은 PR Validation에서 완료됨)
       # -------------------------------------------------------------------------
       - name: Build and push ${{ matrix.service }}
         uses: docker/build-push-action@v5
@@ -304,12 +258,12 @@ jobs:
 
       - name: Output image info
         run: |
-          echo "### 🚀 Image Published to ECR (Scan Completed)" >> $GITHUB_STEP_SUMMARY
+          echo "### 🚀 Image Published to ECR" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Service:** ${{ matrix.service }}" >> $GITHUB_STEP_SUMMARY
           echo "**Environment:** ${{ needs.detect-changes.outputs.environment }}" >> $GITHUB_STEP_SUMMARY
           echo "**Branch:** ${{ needs.detect-changes.outputs.branch }}" >> $GITHUB_STEP_SUMMARY
-          echo "**ECR Registry:** ${{ needs.detect-changes.outputs.ecr_registry }}" >> $GITHUB_STEP_SUMMARY
+          echo "**ECR Registry:** ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-northeast-2.amazonaws.com" >> $GITHUB_STEP_SUMMARY
           echo "**SHA Tag:** ${{ steps.tags.outputs.tag_sha }}" >> $GITHUB_STEP_SUMMARY
           echo "**Platforms:** linux/amd64, linux/arm64" >> $GITHUB_STEP_SUMMARY
 
@@ -329,7 +283,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITOPS_PAT }}
+          token: ${{ secrets.GITOPS_PAT || github.token }}
           fetch-depth: 0
 
       - name: Set environment variables
@@ -339,7 +293,8 @@ jobs:
           ENV="${{ needs.detect-changes.outputs.environment }}"
           NEW_TAG="${ENV}-${SHORT_SHA}"
           K8S_BRANCH="${{ needs.detect-changes.outputs.k8s_branch }}"
-          ECR_REGISTRY="${{ needs.detect-changes.outputs.ecr_registry }}"
+          # ECR registry를 직접 구성 (outputs으로 전달 시 secret 마스킹 문제 회피)
+          ECR_REGISTRY="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com"
 
           echo "SHORT_SHA=${SHORT_SHA}" >> $GITHUB_ENV
           echo "NEW_TAG=${NEW_TAG}" >> $GITHUB_ENV
