--- a/.gitignore
+++ b/.gitignore
@@ -202,5 +202,6 @@ override.tf.json
 *_override.tf
 *_override.tf.json
 
-# Legacy
-terraform/dev/*
+# Terraform sensitive files (tfvars may contain secrets)
+terraform/**/terraform.tfvars
+terraform/**/.terraform/
